<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentActivity">

    <ImageView
        android:id="@+id/contentImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_image_height"
        android:src="@drawable/image_placeholder"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left_v2"
        android:padding="@dimen/button_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfileImageview"
        android:layout_width="@dimen/user_profile_image_size"
        android:layout_height="@dimen/user_profile_image_size"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/contentImageView"
        app:layout_constraintBottom_toTopOf="@+id/userInfoDivisor"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/button_padding"
        android:src="@drawable/image_placeholder"/>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/content_user_name_placeholder"
        style="@style/user_name_text_style"
        app:layout_constraintStart_toEndOf="@+id/userProfileImageview"
        app:layout_constraintTop_toTopOf="@+id/userProfileImageview"
        app:layout_constraintBottom_toTopOf="@id/userAddressTextView"/>


    <TextView
        android:id="@+id/userAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/content_user_address_placeholder"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userProfileImageview"
        app:layout_constraintBottom_toBottomOf="@+id/userProfileImageview"
        app:layout_constraintTop_toBottomOf="@id/userNameTextView"/>


    <ImageView
        android:id="@+id/userTemperatureImageView"
        android:layout_width="@dimen/user_temperature_image_size"
        android:layout_height="@dimen/user_temperature_image_size"
        android:src="@drawable/ic_happy_face"
        android:layout_margin="@dimen/button_padding"
        app:layout_constraintTop_toBottomOf="@+id/contentImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userTemperatureIndicTextView"/>

    <!-- celsius ascii code - \u2103 -->
    <TextView
        android:id="@+id/userTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginEnd="@dimen/contents_item_image_margin"
        style="@style/temperature_text_style"
        app:layout_constraintTop_toTopOf="@id/userTemperatureImageView"
        app:layout_constraintBottom_toBottomOf="@id/userTemperatureImageView"
        app:layout_constraintEnd_toStartOf="@+id/userTemperatureImageView"/>
    <TextView
        android:id="@+id/userTemperatureIndicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_padding"
        android:text="@string/content_user_temperature_indic"
        app:layout_constraintTop_toTopOf="@id/userAddressTextView"
        app:layout_constraintBottom_toBottomOf="@id/userAddressTextView"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/user_temperature_indic_text_style"/>

    <View
        android:id="@+id/userInfoDivisor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divisor_thick"
        android:background="?colorSecondary"
        android:layout_marginTop="@dimen/user_info_height"
        app:layout_constraintTop_toBottomOf="@+id/contentImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/contentTextScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoDivisor"
        app:layout_constraintBottom_toTopOf="@+id/contentChattingButton">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/content_text_margin"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">
            <TextView
                android:id="@+id/contentTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_title_placeholder"
                android:layout_marginBottom="@dimen/content_text_margin"
                style="@style/content_title_text_style"/>
            <TextView
                android:id="@+id/contentDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_description_placeholder"
                style="?android:textAppearanceLarge"/>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/contentLikeImageView"
        android:layout_width="@dimen/content_like_image_size"
        android:layout_height="@dimen/content_like_image_size"
        android:src="@drawable/ic_heart"
        android:padding="@dimen/button_padding"
        android:layout_margin="@dimen/contents_item_image_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/contentLikeDivisor"
        android:layout_width="@dimen/divisor_thick"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@+id/contentLikeImageView"
        app:layout_constraintBottom_toBottomOf="@+id/contentLikeImageView"
        app:layout_constraintStart_toEndOf="@id/contentLikeImageView"
        android:background="?colorSecondary"/>

    <TextView
        android:id="@+id/contentPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_price_text_placeholder"
        style="@style/content_price_text_style"
        app:layout_constraintTop_toTopOf="@+id/contentLikeImageView"
        app:layout_constraintStart_toEndOf="@+id/contentLikeDivisor"
        app:layout_constraintEnd_toStartOf="@id/contentChattingButton"
        app:layout_constraintBottom_toBottomOf="@id/contentLikeImageView"/>

    <Button
        android:id="@+id/contentChattingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_padding"
        android:backgroundTint="@color/orange"
        android:text="@string/content_chatting_button_text"
        app:layout_constraintBottom_toBottomOf="@id/contentLikeImageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/contentLikeImageView" />




    
        
</androidx.constraintlayout.widget.ConstraintLayout>